// Vitest Snapshot v1

exports[`handler 1`] = `
{
  "installedPackages": [],
  "parsedAnswers": {
    "_async": "async ",
    "_await": "await ",
    "backend": "On my local machine",
    "baseUrl": "http://localhost",
    "destPageObjectRootPath": undefined,
    "destSpecRootPath": undefined,
    "esmSupport": true,
    "framework": "@wdio/mocha-framework$--$mocha",
    "generateTestFiles": false,
    "installTestingLibrary": false,
    "isSync": false,
    "isUsingBabel": false,
    "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
    "isUsingTypeScript": true,
    "npmInstall": true,
    "packagesToInstall": [],
    "plugins": [],
    "preset": "@sveltejs/vite-plugin-svelte$--$svelte",
    "projectRootDir": "/foo/bar",
    "rawAnswers": {
      "backend": "On my local machine",
      "baseUrl": "http://localhost",
      "framework": "@wdio/mocha-framework$--$mocha",
      "generateTestFiles": false,
      "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
      "npmInstall": true,
      "plugins": [],
      "preset": "@sveltejs/vite-plugin-svelte$--$svelte",
      "reporters": [],
      "runner": "@wdio/local-runner$--$local",
      "services": [],
    },
    "relativePath": undefined,
    "reporters": [],
    "runner": "@wdio/local-runner$--$local",
    "services": [],
    "specs": undefined,
    "stepDefinitions": undefined,
    "tsConfigFilePath": "/foo/bar/tsconfig.json",
    "tsProject": "./tsconfig.json",
    "usePageObjects": false,
    "wdioConfigPath": "/foo/bar/wdio.conf.ts",
  },
  "success": true,
}
`;

exports[`parseAnswers 1`] = `
{
  "_async": "async ",
  "_await": "await ",
  "backend": "On my local machine",
  "baseUrl": "http://localhost",
  "destPageObjectRootPath": undefined,
  "destSpecRootPath": undefined,
  "esmSupport": true,
  "framework": "@wdio/mocha-framework$--$mocha",
  "generateTestFiles": true,
  "installTestingLibrary": false,
  "isSync": false,
  "isUsingBabel": false,
  "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
  "isUsingTypeScript": true,
  "npmInstall": true,
  "packagesToInstall": [],
  "pages": "/tmp/foobar/pageobjects",
  "plugins": [
    "wdio-wait-for$--$wait-for",
  ],
  "preset": "@sveltejs/vite-plugin-svelte$--$svelte",
  "projectRootDir": "/foo/bar",
  "rawAnswers": {
    "backend": "On my local machine",
    "baseUrl": "http://localhost",
    "framework": "@wdio/mocha-framework$--$mocha",
    "generateTestFiles": true,
    "isUsingCompiler": "TypeScript (https://www.typescriptlang.org/)",
    "npmInstall": true,
    "pages": "/tmp/foobar/pageobjects",
    "plugins": [
      "wdio-wait-for$--$wait-for",
    ],
    "preset": "@sveltejs/vite-plugin-svelte$--$svelte",
    "reporters": [
      "@wdio/spec-reporter$--$spec",
    ],
    "runner": "@wdio/local-runner$--$local",
    "services": [
      "@wdio/sauce-service$--$sauce",
    ],
    "specs": "/tmp/foobar/specs",
    "usePageObjects": true,
  },
  "relativePath": undefined,
  "reporters": [
    "@wdio/spec-reporter$--$spec",
  ],
  "runner": "@wdio/local-runner$--$local",
  "services": [
    "@wdio/sauce-service$--$sauce",
  ],
  "specs": "./../../tmp/foobar/specs",
  "stepDefinitions": undefined,
  "tsConfigFilePath": "/foo/bar/tsconfig.json",
  "tsProject": "./tsconfig.json",
  "usePageObjects": true,
  "wdioConfigPath": "/foo/bar/wdio.conf.ts",
}
`;

exports[`runConfigCommand 1`] = `
[
  [
    "
",
  ],
  [
    "
🤖 Successfully setup project at /foo/bar 🎉

Join our Matrix community and instantly find answers to your issues or queries. Or just join and say hi 👋!
  🔗 https://matrix.to/#/#webdriver.io:gitter.im

Visit the project on GitHub to report bugs 🐛 or raise feature requests 💡:
  🔗 https://github.com/webdriverio/webdriverio

To run your tests, execute:
$ cd /foo/bar
$ npm run wdio
",
  ],
]
`;
